# nrf-mesh-gateway

./: .gitignore  CMakeLists.txt  Kconfig  README.md  cli_cmd_def.md  json_msg_def.md  prj.conf  sample.yaml  west.yml
src/: CMakeLists.txt  btmesh.c  btmesh.h  cli.c  cli.h  codec.c  codec.h  config.h  config.h.in  error.h  gateway.c  gateway.h  gw_cloud.c  gw_cloud.h  lte.c  lte.h  main.c  util.c  util.h
src/watchdog/: watchdog.c
